# k1

./: .gitignore  .gitmodules  .main.dot  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  HashTest.sc  Justfile  README.md  TODO.md  a.bfl  a.c  a.k1  a.nx  a.out  a_fail.ll  ability_generic.k1  agg.c  agg.k1  agg_c.ll  agg_fail.ll  alignment.c  alignment.ll  alignment_scratch.bfl  aoc1.bfl  aoc1.nx  array.k1  asmc.sh  b.bfl  b.k1  b.nx  b_fail.ll  binop_typecheck  bitfield.k1  bool.nx_llvm_out.ll  bt.c  buffer_test.k1  bug.bfl  bug.k1  (+139 more)
.cargo/: config.toml
.github/workflows/: ci.yml
.zed/: tasks.json
a_proj/: main.bfl  util.bfl
aoc/: aoc_interview.bfl
bfllib/: bfllib.c  bfllib.ll  build.zig
bfllib/src/: main.zig
builds/: Dockerfile-build-linux-amd64  Dockerfile-test-linux-amd64  README.md  build_linux_cross.sh  bundle.sh  bundle_linux.sh  install.sh
builtins/: allocator.k1  bitwise.k1  buffer.k1  builtin.k1  core.k1  hash.bfl  hash.k1  list.k1  opt.k1  prelude.bfl  prelude.k1  string.k1  string_builder.k1  types.k1
design/: ability.txt  coalescing_v2.k1.wip  dive.txt  flags_in_tags.k1  mem_static.k1  mem_static.k1.wip  metaprogramming_2025.txt  resources.txt  sets_tags.k1  token_stream.k1
design/2024/: context.k1
docs/: k1-additional.md  k1-syntax-basics.md
dogfood/: java_compare.k1
dogfood/a_proj/: main.bfl  util.bfl
dogfood/aoc/: aoc1.bfl  aoc1.k1
dogfood/bindgen.k1/: Justfile  compile_flags.txt  file.c  file.cpp  file.rs  httpserver_auto.k1.wip  libclang_manual.k1  main.cpp  main.k1  oracle.c
dogfood/chess/: main.bfl  main.k1  model.k1
dogfood/cliarg/: main.k1
dogfood/helloworld/: main.k1  orders.csv
dogfood/http/: Justfile  app.k1  hello_llhttp.c  http.k1  httpserver_auto  kqueue.k1  kqueue_hello.c  libuv_manual.k1  llhttp.k1  load_http.py  main.k1  net.c  net.k1  package-lock.json  package.json  pthread.c  pthread.k1  pubsub.k1  rcbuf.k1  stream.k1  task.k1  test-uv-fs.k1  uv.k1  uv_bindgen_prelude.k1.txt  uv_ext.k1  work.k1
dogfood/http_old_badlib/: Justfile  http.k1  kqueue.k1  kqueue_hello  main.k1
dogfood/k1bindgen/: Justfile  file.k1  libclang_auto.k1.wip  libclang_manual.k1  llhttp.k1  main.k1  test.k1
dogfood/lam/: main.k1
dogfood/modules_test/: addlib.k1
dogfood/postgres/: main.k1  run.sh
dogfood/profiling/: profiling.k1
dogfood/raylib/: bindtest.c  install.sh  main.k1  raylib_main.k1  run.sh
dogfood/refchess/: TODO.md  UCI-Protocol-Specification.txt  autoperft.py  fib.k1  main.k1  naive.k1  uci.k1
dogfood/toyforth/: a.forth  pool.k1  tf.k1
examples/: 050_macros.k1
k1lib/: k1_unwind.c  k1lib.c  k1rt.c  k1rt_backtrace.c
k1lib/core/: FixList.k1  SpillList.k1  StringBuilder.k1  arena.k1  atomic.k1  bitwise.k1  buffer.k1  builtin.k1  builtin.k1.bak  code.k1  core.k1  ffc.h.k1  fix-list.k1  fixlist.k1  list.k1  mem.k1  meta.k1  opt.k1  range.k1  result.k1  span.k1  spill-list.k1  string-builder.k1  string.k1  string_builder.k1  types.k1  view.k1
k1lib/std/: FixList.k1  SpillList.k1  bitfield.k1  cliarg.k1  fmt.k1  hash.k1  json.k1  math.k1  sys.k1  thread.k1  time.k1
llvm/: get_llvm.sh
nxlib/: build.zig  llvm
nxlib/src/: main.zig
resources/: add.ll  main.s
resources/c/: add.c  agg_c.ll  hello.c  llvmc.sh  struct.asm  struct.c  test_thread.c  union.c
resources/design/: Abstraction.bfl  Abstraction.nx  Array.bfl  Array.nx  Data.nx  Data_old.bfl  Effects.bfl.txt  Effects.nx  Effects.nx.txt  References.bfl  References.nx  effects_old.bfl  effects_old.nx  hello_world.bfl  hello_world.nx  memory_ideas.bfl.txt  metaprogramming_2025.txt  notes.md  precedence.txt  resources.txt
resources/nexsample/: basic_fn.nx  types.nx
resources/nixsample/: basic_fn.nx  hello_world.nx  sample.nx  strings.nx  struct.nx  val_only.nx
resources/test_src/: arith.nx  array_bool.nx  array_fill.nx  array_int.nx  array_of_structs.nx  assign.nx  assign_array.nx  assign_record.nx  assign_var.bfl  assign_var.nx  bool.nx  bool.nx.out  char_hello.nx  codegen_fn.nx  codegen_fn.nx.out  fib.nx  for_yield_string.bfl  generic_inference.bfl  generic_inference.nx  global_val.nx  hello_array.nx  hello_record.nx  identity_generic.nx  if.nx  if_no_else.nx  int_add.nx  (+25 more)
rt/: unwind.c
sandbox/: a.k1  main.k1  static_type_literals.k1
sandboxb/: b.k1
src/: ast.rs  codegen.rs  codegen_ir.rs  codegen_llvm.rs  gui.rs  ir.rs  lex.rs  log.rs  main.rs  nir.rs  output.rs  parse.rs  prelude.rs  test_suite.rs  typer.rs
static_rework/: a.k1
stdlib/: allocator.k1  arena.k1  bitwise.k1  buffer.k1  builtin.k1  core.k1  list.k1  mem.k1  opt.k1  range.k1  string.k1  string_builder.k1  types.k1
test_src/: ability.bfl  ability.k1  ability_constraint.k1  ability_constraint_fail.k1  ability_fail.k1  ability_generic.k1  ability_self_call.k1  all_out_of_order.k1  allocator_test.k1  arewejsonyet.k1  arith.bfl  arith.k1  array.k1  array_bool.k1  array_bounds_check.k1  array_equality.bfl  array_equality.k1  array_fill.k1  array_int.k1  array_of_structs.k1  assign.k1  assign_array.k1  assign_struct.bfl  assign_struct.k1  assign_var.k1  atomic_threads.k1  bits.bfl  bits.k1  block_lexical_scoping.k1  bool.bfl  bool.k1  buffer_test.k1  char_escape.bfl  char_escape.k1  char_hello.k1  closure_1.k1  closure_capture_1.k1  closure_capture_mut_var.k1  closure_return.k1  closure_simple.k1  (+119 more)
(+298 files in other folders)
