[package]
name = "k1"
version = "0.1.0"
edition = "2021"
default-run = "compiler"

[lib]
name = "k1"
path = "src/k1/lib.rs"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2"
env_logger = "0.10.0"
llvm-sys = "150"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm15-0",
] }
log = "0.4.17"
smallvec = "1.10.0"
string-interner = "0.17.0"
zstd-sys = "2.0.8"
either = "1.9.0"
raylib = "5.0.1"

[[bin]]
name = "test_suite"
path = "src/bin/test_suite.rs"

[[bin]]
name = "compiler"
path = "src/bin/compiler_main.rs"

# [profile.dev]
# debug = 0
# strip = "debuginfo"

[profile.release]
panic = "abort"

[lints.clippy]
let_and_return = "allow"
match_like_matches_macro = "allow"
too_many_arguments = "allow"
collapsible_else_if = "allow"
manual_map = "allow"
