[package]
name = "k1"
version = "0.1.0"
edition = "2021"
default-run = "compiler"

[lib]
name = "k1"
path = "src/k1/lib.rs"

[features]
lsp = ["tokio", "tower-lsp", "tokio-util", "tracing", "tracing-appender", "tracing-subscriber"]
gui = ["raylib"]

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2"
env_logger = "0.10.0"
llvm-sys = { version = "181.2.0" }
inkwell = { git = "https://github.com/TheDan64/inkwell", version = "0.5.0", features = [ "llvm18-0"] }
zstd-sys = "2.0.8"
libffi = "3.2.0"
log = "0.4.17"
itertools = "0.13.0"
smallvec = "1.13.2"
string-interner = "0.17.0"
either = "1.9.0"
ahash = "0.8.11"
fxhash = "0.2.1"

# lsp-only deps
tower-lsp = { version = "0.20.0", optional = true }
tokio = { version = "1.17", features = ["full"], optional = true}
tokio-util = { version = "0.7", features = ["codec"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tracing-appender = { version = "0.2", optional = true }

# raylib gui only deps
raylib = { version = "5.0.1", optional = true}
scopeguard = "1.2.0"
mimalloc = "0.1.43"

[[bin]]
name = "test_suite"
path = "src/bin/test_suite.rs"

[[bin]]
name = "compiler"
path = "src/bin/compiler_main.rs"

[[bin]]
name = "lsp"
path = "src/bin/lsp_main.rs"
required-features = ["lsp"]

[[bin]]
name = "gui"
path = "src/bin/gui_main.rs"
required-features = ["raylib"]

[[bin]]
name = "repl"
path = "src/bin/repl_main.rs"

# [profile.dev]
# debug = 0
# strip = "debuginfo"

[profile.release]
panic = "abort"

[lints.clippy]
let_and_return = "allow"
match_like_matches_macro = "allow"
too_many_arguments = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
manual_map = "allow"
